--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.2",
     "@ant-design/pro-layout": "^6.5.0",
-    "@ant-design/pro-table": "^3.16.0",
-    "bizcharts": "^4.1.23",
+    "@ant-design/pro-table": "^2.61.9",
+    "antd": "^4.0.0",
+    "bizcharts": "^4.1.15",
     "react": "17.x",
     "react-dom": "17.x",
-    "umi": "^3.5.41"
+    "umi": "^3.5.20"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
-    "@umijs/preset-ui": "^2.2.9",
-    "@umijs/test": "^3.5.41",
+    "@umijs/test": "^3.5.20",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
