--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.2",
     "@ant-design/pro-layout": "^6.5.0",
-    "@ant-design/pro-table": "^2.61.9",
+    "@ant-design/pro-table": "^3.16.0",
     "antd": "^4.0.0",
     "bizcharts": "^4.1.15",
     "react": "17.x",
@@ -33,7 +33,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.5.20",
+    "@umijs/preset-ui": "^2.2.9",
+    "@umijs/test": "^3.5.41",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
